# claude-agent-sdk-demos

./: README_CN.md
codex_dialogue/: codex_20251229_193950.md
excel-demo-py/: README.md  excel_demo.py  requirements.txt
hello-world-py/: README.md  hello_world.py
research-agent/: README.md  README_CN.md  generate_llm_report.py
research-agent/cc_dialogue/: cc_20251228_221501.md  cc_20251229_185603.md
research-agent/codex_dialogue/: codex_20251229_182713.md  codex_20251229_190231.md  codex_20251229_192112.md
research-agent/files/reports/: pythagorean_report_generator.py
research-agent/files/research_notes/: deepseek_r1_evolution.md  forward_reverse_proxy_research.md  forward_reverse_proxy_technical_comparison.md  test.md  (+13 more)
research-agent/research_agent/: agent.py
twitter-vibe-agent/: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  pyproject.toml
twitter-vibe-agent/files/agent/generated_posts/: draft_posts.md
twitter-vibe-agent/files/agent/optimized_posts/: final_posts.md
twitter-vibe-agent/files/agent/organized/: article_details.md  dialogue_insights.md
twitter-vibe-agent/files/user/dialogue_records/: claude code vs codex.md
twitter-vibe-agent/files/user/source_articles/: claude code, codex, which is better?
twitter-vibe-agent/twitter_vibe_agent/: agent.py
twitter-vibe-agent/twitter_vibe_agent/prompts/: content_generator_zh.txt  content_organizer_zh.txt  lead_agent_zh.txt  quality_optimizer_zh.txt
twitter-vibe-agent/twitter_vibe_agent/utils/: message_handler.py  subagent_tracker.py  transcript.py
(+6 files in other folders)
